--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>less-core</module>
+        <module>less-base</module>
     </modules>
 
     <properties>
@@ -23,6 +23,7 @@
         <jackson.version>2.11.3</jackson.version>
         <mysql.version>8.0.22</mysql.version>
         <feign.core.version>11.0</feign.core.version>
+        <retrofit.version>2.9.0</retrofit.version>
         <lombok.version>1.18.16</lombok.version>
         <junit5.version>5.7.0</junit5.version>
         <logback.version>1.2.3</logback.version>
