--- a/less-leetcode/pom.xml
+++ b/less-leetcode/pom.xml
@@ -9,7 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>less-spring</artifactId>
+    <artifactId>less-leetcode</artifactId>
 
+    <dependencies>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
+
+    </dependencies>
 </project>
